<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:src="@drawable/ic_cross_01__1_" />

            <TextView
                android:id="@+id/ad_advertiser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/ad_img_"

                android:textSize="12sp" />

            <TextView
                android:id="@+id/ad_img_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                style="@style/AdAttribution"/>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/view_native_root"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/media_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@id/ad_media"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_native_root_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_native_layout"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:layout_constraintBottom_toTopOf="@+id/media_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_native_root">

                    <ImageView
                        android:id="@id/cubi_interstitial_square_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="8dp"
                        android:src="@drawable/adhelper_logo" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/media_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/button_layout"
                    app:layout_constraintHeight_percent=".55"
                    app:layout_constraintTop_toBottomOf="@+id/view_native_root">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/native_ad_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/title"
                            android:textColor="@color/black87"
                            android:textSize="22sp"
                            android:textStyle="bold" />
                        <!--                        hide by default-->
                        <LinearLayout
                            android:id="@+id/linear_layout_rating_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <RatingBar
                                android:id="@+id/ad_stars"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginStart="5dp"
                                android:isIndicator="true"
                                android:numStars="5"
                                android:padding="8dp"
                                android:stepSize=".5" />

                            <TextView
                                android:id="@+id/ad_stars_feedback_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/test_feedback_num"
                                android:textColor="@color/cardview_dark_background" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/ad_body"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="8dp"
                            android:text="@string/body_text"
                            android:textColor="@color/black87" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ad_media"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_button_calltoaction"
                    style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_floating_button"
                    android:contentDescription="@string/install_desc"
                    android:padding="16dp"
                    android:src="@drawable/ic_baseline_download_24"
                    android:translationZ="2dp"
                    app:layout_constraintBottom_toTopOf="@id/button_layout"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/media_layout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/blueTransparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".15"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/media_layout">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/adEtc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/exit"
                        android:textColor="@color/black54"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@+id/ad_call_to_action"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <TextView
                            android:id="@+id/ad_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:paddingEnd="5dp"
                            android:paddingRight="5dp"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ad_store"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent=".5" />

                        <TextView
                            android:id="@+id/ad_store"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:paddingEnd="5dp"
                            android:paddingRight="5dp"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ad_price"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent=".5" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/ad_call_to_action"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="8dp"
                        android:background="@null"

                        android:padding="6dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/install_calltoaction"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"

                        app:layout_constraintTop_toBottomOf="@id/adEtc" />

                    <LinearLayout
                        android:id="@+id/google_playstore"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="30dp"

                        android:layout_marginBottom="8dp"

                        android:background="@null"

                        android:orientation="horizontal"
                        android:padding="6dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        app:layout_constraintTop_toBottomOf="@id/adEtc">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/googleplay_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="12dp"
                            android:text="@string/google_play"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>